Remove obsolete fix tests
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@34960 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2000-07-11  Bruce Korb  <bkorb@gnu.org>
+
+	* fixinc/fixtests.c(double_slash): obsolete
+	(else_endif_label): likewise
+
 2000-07-11  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
 
 	* cpplex.c (T, I, S, C, N): Avoid non-constant initializers.
