--- a/libjava/testsuite/ChangeLog
+++ b/libjava/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2000-07-11  Andrew Haley  <aph@cygnus.com>
+
+	* libjava.compile/static_init2.java: New file.
+
 2000-07-07  Tom Tromey  <tromey@cygnus.com>
 
 	* libjava.lang/stringconst2.out: New file.
