irix_multiline_cmnt is now obsolete
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@34964 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -2,6 +2,8 @@
 
 	* fixinc/fixtests.c(double_slash): obsolete
 	(else_endif_label): likewise
+	* fixinc/inclhack.def(irix_multiline_cmnt): obsolete
+	* fixinc/fixincl.x: regen
 
 2000-07-11  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
 
