--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2000-07-11  Marc Espie <espie@openbsd.org>
+
+	* collect2.c (main): Recognize .lo as object files.
+
 2000-07-11  J. David Anglin  <dave@hiauly1.hia.nrc.ca>
 
 	* aclocal.m4 (AC_FUNC_MMAP_ANYWHERE): Extend test to detect systems
