* gcc.texi: Fix minor typos         * extend.texi: Fix minor typos
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@34980 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2000-07-11  Rodney Brown  <RodneyBrown@pmsc.com>
+
+	* gcc.texi: Fix minor typos
+	* extend.texi: Fix minor typos
+
 2000-07-11  Marc Espie <espie@openbsd.org>
 
 	* collect2.c (main): Recognize .lo as object files.
