* gcc_update (files_and_dependencies): Remove generated YACC files.
	* c-parse.c: Remove.
	* c-parse.h: Likewise.
	* c-parse.y: Likewise.
	* objc/objc-parse.c: Likewise.
	* objc/objc-pasre.y: Likewise.

	* Makefile.in ($(PARSE_H)): Depend directly on parse.y.
	* parse.c: Remove.
	* parse.h: Likewise.

	* parse-scan.c: Remove.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@34982 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,11 @@
+2000-07-12  Mark Mitchell  <mark@codesourcery.com>
+
+	* c-parse.c: Remove.
+	* c-parse.h: Likewise.
+	* c-parse.y: Likewise.
+	* objc/objc-parse.c: Likewise.
+	* objc/objc-pasre.y: Likewise.
+	
 2000-07-11  Rodney Brown  <RodneyBrown@pmsc.com>
 
 	* gcc.texi: Fix minor typos
