--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,9 @@
+2000-07-12  Mark Mitchell  <mark@codesourcery.com>
+
+	* Makefile.in ($(PARSE_H)): Depend directly on parse.y.
+	* parse.c: Remove.
+	* parse.h: Likewise.
+
 2000-07-11  Mark Mitchell  <mark@codesourcery.com>
 
 	* class.c (layout_class_type): Add pointers to virtual bases after
