--- a/gcc/java/ChangeLog
+++ b/gcc/java/ChangeLog
@@ -1,3 +1,7 @@
+2000-07-12  Mark Mitchell  <mark@codesourcery.com>
+
+	* parse-scan.c: Remove.
+
 2000-07-10  Alexandre Petit-Bianco  <apbianco@cygnus.com>
 
 	* jcf-write.c (generate_classfile): Don't install ConstantValue
