* expr.c (expand_expr): Return const0_rtx, not error_mark_node.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@34991 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2000-07-12  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
+
+	* expr.c (expand_expr): Return const0_rtx, not error_mark_node.
+
 2000-07-12  Richard Henderson  <rth@cygnus.com>
 
 	* reload.c (push_secondary_reload): Make sure to add the new
