--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,8 @@
+2000-07-12  David Billinghurst  <David Billinghurst@riotinto.com.au>
+
+	* g77.f-torture/compile/20000630-2.f:  New test.
+	* g77.f-torture/compile/20000630-2.x
+
 2000-07-11  David Billinghurst  <David.Billinghurst@riotinto.com.au>
 
 	* g77.f-torture/execute/20000503-1.x: Delete.  Test now passes.
