2000-07-12  Gabriel Dos Reis  <gdr@codesourcery.com>
	* Makefile.in (c-errors.o): Fix thinko in dependency.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@34996 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2000-07-12  Gabriel Dos Reis  <gdr@codesourcery.com>
+
+	* Makefile.in (c-errors.o): Fix thinko in dependency.
+
 2000-07-12  Zack Weinberg  <zack@wolery.cumb.org>
 
 	* gcc.c (C specs [!USE_CPPLIB]): Invoke tradcpp if any of
