* pa/xm-pa64.h (NO_SYS_SIGLIST): Kill.         * d30v/xm-d30v.h (NO_SYS_SIGLIST): Kill.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@34998 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+Wed Jul 12 13:24:30 2000  Jeffrey A Law  (law@cygnus.com)
+
+	* pa/xm-pa64.h (NO_SYS_SIGLIST): Kill.
+	* d30v/xm-d30v.h (NO_SYS_SIGLIST): Kill.
+
 2000-07-12  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
 
 	* c-decl.c (define_label): Warn about identifier conflicts with
